karl package Changelog
======================

Unreleased
----------

- Get intranets root edit form to correctly default to the sample_feature
  value when the feature field is left blank.

- TemplateAPI object now sets an 'error_message' attribute for formish
  form submission requests w/ validation errors; templates will notice
  this and render a top-of-form error message (fixes LP#564134).

- Improve usability on the formish 'sendalert' fields (see LP#564131).

- Re-specify default 'sendalert' value as True on calendar event add form
  (fixes LP#564115).

- Add "overflow: auto" to the #right div CSS to prevent bad rendering when
  poorly formed (read: very long words w/ no word break, e.g. a long URL)
  content is pulled into a side portlet (fixes LP#540296).

- Slight tweaks to the Network Events search UI and behavior to improve user
  experience (see LP#554028).

- Sacrifice a chicken and provide a default value for the 'min_pw_length'
  setting since certain invocations of the test framework cause that to not
  yet be initialized.

- Remove FormEncode and repoze.enformed dependencies and all dependent code.

- Convert change password form to formish.

- Convert calendar setup form to not use FormEncode / repoze.enformed.

- Convert calendar event add / edit forms to formish.

- Convert comment add / edit forms to formish.

- Convert reference section add / edit forms to formish.

- Convert reference manual add / edit forms to formish.

- Convert password reset request and confirm forms to formish.

- Converted profile and news item photos to use the newer, image drawer
  compatible image and thumb nails.  Deprecated and removed older image
  handling code previously used to support these.

- LP# 544199 Fixed KeyError in Admin Delete Content view when nested nodes are
  selected for deletion.

- LP# 544199 Added 'path' to content selection grid used in some admin views.
  Changed sort index to 'path' for content selection grid.

3.27 (2010-04-08)